# dotfiles

./: .gitmodules  CLAUDE.md  dot_bash_profile.tmpl  dot_bashrc  dot_bashrc.tmpl  install.sh  run_onchange_after_aqua-load.sh.tmpl  run_onchange_after_rye-load.sh.tmpl  stylua.toml
.github/: renovate.json  renovate.json5
dot_config/aquaproj-aqua/: aqua-policy.yaml  aqua.yaml  registry.yaml
dot_config/efm-langserver/: config.yaml
dot_config/nvim/: init.lua  lazy-lock.json
dot_config/nvim/lua/: plugins.lua
dot_config/private_fish/: config.fish
dot_config/private_fish/completions/: rg.fish
dot_config/private_fish/conf.d/: env.fish
dot_config/private_fish/functions/: __ghq_look.fish  __ghq_preview.fish  __wezterm_set_user_var.fish  git-logsearch.fish
dot_config/wezterm/: keybinds.lua  status.lua  title.lua  wezterm.lua
dot_config/yamllint/: config
home/: .chezmoiexternal.toml  dot_bash_profile.tmpl  dot_bashrc  run_onchange_after_aqua-load.sh.tmpl  run_onchange_after_nvim-lock.sh.tmpl  run_onchange_after_pnpm-load.sh.tmpl  run_onchange_after_rye-load.sh.tmpl
home/dot_config/: starship.toml
home/dot_config/aquaproj-aqua/: aqua.yaml  registry.yaml
home/dot_config/efm-langserver/: config.yaml
home/dot_config/ghostty/: config
home/dot_config/nvim/lua/tools/python/: init.lua  pyproject.toml
home/dot_config/tmux/: config  (+1 more)
private_dot_config/: starship.toml
private_dot_config/git/: config.tmpl
private_dot_config/nvim/: .luarc.json  init.lua  lazy-lock.json
private_dot_config/private_fish/: config.fish
private_dot_config/wezterm/: wezterm.lua
(+102 files in other folders)
