[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tosuke", email = "13393900+tosuke@users.noreply.github.com" }
]
dependencies = [
    "yamllint>=1.33.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "python:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]
